--- a/05-17.November/content/auswertung.tex
+++ b/05-17.November/content/auswertung.tex
@@ -6,41 +6,41 @@ Dem Versuchsaufbau wurden die Temperatur T1 und T2, der Druck $p_{\text{b}}$ und
   \centering
   \begin{tabular}{c c c c c c}
     \toprule
-    $t$ / s & $T_{\text{1}}$ / K & $p_{\text{b}}$ /bar & $T_{2}$ /K & $P_{\text{a}}$ /bar & 
+    $t$ / s & $T_{\text{1}}$ / K & $p_{\text{b}}$ /kPa & $T_{2}$ /K & $P_{\text{a}}$ /bar & 
     Leistung /W \\
     \midrule
-    0 	& 294.1 & 3	&4 &5&6 \\
-    1 	& 294.7 &	&	\\
-    2 	& 295.9 &	&	\\
-    3 	& 296.9 &	&	\\
-    4	& 298.2	&	&	\\
-    5	& 299.4 &	&	\\
-    6	& 300.7 &	&	\\
-    7	& 302.0 &	&	\\
-    8	& 303.2	&	&	\\
-    9	& 304.4 &	&	\\
-    10	& 305.5 &	&	\\
-    11 	& 306.6 &	&	\\
-    12	& 307.6	&	&	\\	
-    13	& 308.7 &	&	\\	
-    14 	& 309.7 &	&	\\
-    15 	& 310.7 &	&	\\
-    16 	& 311.6	&	&	\\
-    17	& 312.5	&	&	\\
-    18	& 313.5	&	&	\\
-    19	& 314.3	&	&	\\
-    20	& 315.2	&	&	\\
-    21	& 316.0	&	&	\\
-    22	& 316.8	&	&	\\
-    23	& 317.5	&	&	\\
-    24	& 318.3	&	&	\\
-    25	& 319.0	&	&	\\
-    26	& 319.8	&	&	\\
-    27	& 320.5	&	&	\\
-    28	& 321.2	&	&	\\
-    29	& 321.8	&	&	\\
-    30	& 322.5	&	&	\\
-    31	& 323.3	&	&	\\
+    0 	& 294.1 & 466	& 294.3	&5	&6 \\
+    1 	& 294.7 & 608	& 294.3	&	&	\\
+    2 	& 295.9 & 618	& 293.2	&	&	\\
+    3 	& 296.9 & 638	& 292.5	&	&	\\
+    4	& 298.2	& 628	& 291.3	&	&	\\
+    5	& 299.4 & 709	& 290.2	&	&	\\
+    6	& 300.7 & 730	& 289.3	&	&	\\
+    7	& 302.0 & 760	& 288.5	&	&	\\
+    8	& 303.2	& 790	& 287.7	&	&	\\
+    9	& 304.4 & 812	& 287.0	&	&	\\
+    10	& 305.5 & 820	& 286.3	&	&	\\
+    11 	& 306.6 & 840	& 285.6	&	&	\\
+    12	& 307.6	& 861	& 284.9	&	&	\\	
+    13	& 308.7 & 891	& 284.1	&	&	\\	
+    14 	& 309.7 & 911	& 283.5	&	&	\\
+    15 	& 310.7 & 922	& 282.8	&	&	\\
+    16 	& 311.6	& 963	& 282.2	&	&	\\
+    17	& 312.5	& 993	& 281.5	&	&	\\
+    18	& 313.5	& 1003	& 281.0	&	&	\\
+    19	& 314.3	& 1023	& 280.5	&	&	\\
+    20	& 315.2	& 1044	& 280.0	&	&	\\
+    21	& 316.0	& 1064	& 279.5	&	&	\\
+    22	& 316.8	& 1094	& 279.0	&	&	\\
+    23	& 317.5	& 1104	& 278.6	&	&	\\
+    24	& 318.3	& 1115	& 278.3	&	&	\\
+    25	& 319.0	& 1135	& 277.9	&	&	\\
+    26	& 319.8	& 1155	& 277.5	&	&	\\
+    27	& 320.5	& 1175	& 277.2	&	&	\\
+    28	& 321.2	& 1196	& 276.9	&	&	\\
+    29	& 321.8	& 1216	& 276.6	&	&	\\
+    30	& 322.5	& 1226	& 276.3	&	&	\\
+    31	& 323.3	& 1236	& 276.1	&	&	\\
   \end{tabular}
   \caption{Dem Versuchsaufbau entommene Messgrößen}
   \label{tab:Daten}
