--- a/05-17.November/content/auswertung.tex
+++ b/05-17.November/content/auswertung.tex
@@ -55,7 +55,11 @@ Wasser befüllt. Desweiteren werden die Temperatur T1 und T2, der Druck $p_{\tex
   \label{tab:Daten}
 \end{table}
 
-Zu beachten ist das alle Messgrößen einen Messunsicherheit besitzen, einerseits eine ablesefehler bei analogen Messinstrumenten als auch einen technischen.
+Zu beachten ist das alle Messgrößen einen Messunsicherheit besitzen, einerseits eine Ablesefehler bei analogen Messinstrumenten als auch einen Technischen.
 \begin{eqnarray*}
-  \Delta p
-\end{eqnarray*}<++>
+  \Delta p = 10 \text{kp}				\\
+  \Delta C = 10 \frac{\text{J}}{\text{K}}		\\
+  \Delta V = 1.6 \text{mL}				\\
+  \Delta \rho = \+- 13 \frac{\text{kg}}{\text{m$^2$}}	\\
+\end{eqnarray*}
+Die Messunsicherheit von der Dichte für Wasser kommt daraus zu stande das Wasser bei verschiedenen Temperatruren seine Dichte ändert. 
