--- a/00-Vorlage/content/theorie.tex
+++ b/00-Vorlage/content/theorie.tex
@@ -1,7 +1,7 @@
 \section{Theoretische Grundlage}
 \label{sec:Theorie}
 
-
+bla vla vla
 
 
 
@@ -16,7 +16,7 @@ Der Mittelwert einer Messreihe $x_1, ... ,x_n$ lässt sich durch die Formel
 	\overline{x} = \frac{1}{N} \sum_{k=1}^N x_k
 	\label{eqn:ave}
 \end{equation}
-berechnen. Die Standardabweichung des Mittelwertes beträgt 
+berechnen. Die Standardabweichung des Mittelwertes beträgt
 \begin{equation}
 	\Delta \overline{x} = \sqrt{ \frac{1}{N(N-1)} \sum_{k=1}^N (x_k - \overline{x})^2}
 	\label{eqn:std}
@@ -30,7 +30,7 @@ Wenn $x_1, ..., x_n$ fehlerbehaftete Messgrößen im weiteren Verlauf benutzt we
 \end{equation}
 
 \subsubsection{Lineare Regression}
-Die Steigung und y-Achsenabschnitt einer Ausgleichsgeraden werden gegebenfalls mittels Linearen Regression berechnet. 
+Die Steigung und y-Achsenabschnitt einer Ausgleichsgeraden werden gegebenfalls mittels Linearen Regression berechnet.
 \begin{equation}
 	y = m \cdot x + b
 	\label{eqn:reg}
