--- a/05-17.November/content/auswertung.tex
+++ b/05-17.November/content/auswertung.tex
@@ -62,4 +62,10 @@ Zu beachten ist das alle Messgrößen einen Messunsicherheit besitzen, einerseit
   \Delta V = 1.6 \text{mL}				\\
   \Delta \rho = \+- 13 \frac{\text{kg}}{\text{m$^2$}}	\\
 \end{eqnarray*}
-Die Messunsicherheit von der Dichte für Wasser kommt daraus zu stande das Wasser bei verschiedenen Temperatruren seine Dichte ändert. 
+Die Messunsicherheit von der Dichte für Wasser kommt daraus zu stande das Wasser bei verschiedenen Temperatruren seine Dichte ändert.
+\begin{figure}
+  \centering
+  \includegraphics[width=\textwidth]{TVerlauf.pdf}
+  \caption{Das Pep-Logo.}
+  \label{fig:peplogo}
+\end{figure}
