--- a/00-Vorlage/content/theorie.tex
+++ b/00-Vorlage/content/theorie.tex
@@ -1,31 +1,27 @@
 \section{Theoretische Grundlage}
 \label{sec:Theorie}
 
-bla vla vla
-
-
-
 
 
 
 \subsection{Fehlerrechnung}
 Sämtliche Fehlerrechnungen werden mit Hilfe von Python 3.4.3 durchgeführt.
 \subsubsection{Mittelwert}
-Der Mittelwert einer Messreihe $x_1, ... ,x_n$ lässt sich durch die Formel
+Der Mittelwert einer Messreihe $x_\text{1}, ... ,x_\text{n}$ lässt sich durch die Formel
 \begin{equation}
-	\overline{x} = \frac{1}{N} \sum_{k=1}^N x_k
+	\overline{x} = \frac{1}{N} \sum_{\text{k}=1}^\text{N} x_k
 	\label{eqn:ave}
 \end{equation}
 berechnen. Die Standardabweichung des Mittelwertes beträgt
 \begin{equation}
-	\Delta \overline{x} = \sqrt{ \frac{1}{N(N-1)} \sum_{k=1}^N (x_k - \overline{x})^2}
+	\Delta \overline{x} = \sqrt{ \frac{1}{N(N-1)} \sum_{\text{k}=1}^\text{N} (x_\text{k} - \overline{x})^2}
 	\label{eqn:std}
 \end{equation}
 
 \subsubsection{Gauß'sche Fehlerfortpflanzung}
-Wenn $x_1, ..., x_n$ fehlerbehaftete Messgrößen im weiteren Verlauf benutzt werden, wird der neue Fehler $\Delta f$ mit Hilfe der Gaußschen Fehlerfortpflanzung angegeben.
+Wenn $x_\text{1}, ..., x_\text{n}$ fehlerbehaftete Messgrößen im weiteren Verlauf benutzt werden, wird der neue Fehler $\Delta f$ mit Hilfe der Gaußschen Fehlerfortpflanzung angegeben.
 \begin{equation}
-	\Delta f = \sqrt{\sum_{k=1}^N \left( \frac{ \partial f}{\partial x_k} \right) ^2 \cdot (\Delta x_k)^2}
+	\Delta f = \sqrt{\sum_{\text{k}=1}^\text{N} \left( \frac{ \partial f}{\partial x_\text{k}} \right) ^2 \cdot (\Delta x_\text{k})^2}
 	\label{eqn:var}
 \end{equation}
 
