--- a/05-17.November/main.tex
+++ b/05-17.November/main.tex
@@ -1,11 +1,11 @@
 \input{header.tex}
 
-\subject{VERSUCH NUMMER}
-\title{TITEL}
+\subject{206}
+\title{Die Wärmepumpe}
 \date{
-  Durchführung: DATUM
+  Durchführung: 17.11.2015
   \hspace{3em}
-  Abgabe: DATUM
+  Abgabe: 24.11.2015
 }
 
 \begin{document}
