--- a/05-17.November/content/theorie.tex
+++ b/05-17.November/content/theorie.tex
@@ -31,6 +31,7 @@ Mit den Gleichungen \ref{eqn:Q1} und \ref{eqn:reversibel} folgt nun
 und für die Güteziffer einer idealen Wärmepumpe
 \begin{equation}
 	\nu_{Ideal} = \frac{Q_1}{A} = \frac{T_1}{T_1 - T_2} \ .
+	\label{eqn:nuideal}
 \end{equation}
 Die Güteziffer für eine reale Wärmepumpe folgt mit \ref{eqn:Q1} und \ref{eqn:irreversibel}
 \begin{equation}
@@ -38,7 +39,8 @@ Die Güteziffer für eine reale Wärmepumpe folgt mit \ref{eqn:Q1} und \ref{eqn:
 \end{equation}
 Die reale Güteziffer wird im folgenden über
 \begin{equation}
-		\nu_{real} = \frac{\Delta Q_1}{\Delta t N} = (m_1 c_w + m_k c_k) \frac{\Delta T_1}{\Delta t N}
+	\nu_{real} = \frac{\Delta Q_1}{\Delta t N} = (m_1 c_w + m_k c_k) \frac{\Delta T_1}{\Delta t N}
+	\label{eqn:nureal}
 \end{equation}
  berechnet, wobei N := gemittelte Leistungsaufnahme des Kompressors.
 
@@ -71,10 +73,12 @@ Sämtliche Fehlerrechnungen werden mit Hilfe von Python 3.4.3 durchgeführt.
 Der Mittelwert einer Messreihe $x_1, ... ,x_\text{n}$ lässt sich durch die Formel
 \begin{equation}
 	\overline{x} = \frac{1}{N} \sum_{k=1}^N x_\text{k}
+	\label{eqn:ave}
 \end{equation}
 berechnen. Die Standardabweichung des Mittelwertes beträgt
 \begin{equation}
 	\Delta \overline{x} = \sqrt{ \frac{1}{N(N-1)} \sum_{k=1}^N (x_\text{k} - \overline{x})^2}
+	\label{eqn:var}
 \end{equation}
 
 \subsubsection{Gauß'sche Fehlerfortpflanzung}
