--- a/05-17.November/content/auswertung.tex
+++ b/05-17.November/content/auswertung.tex
@@ -120,7 +120,7 @@ Aus der Funktion wird der Differentialqutient für $T1$ und $T2$ für vier versc
   \label{tab:diffQ}
 \end{table}
 
-\subsection{Bestimmung der Güteziffer}
+\subsection{Güteziffer}
 Mit Hilfe des Differentialqoutienten und der Wärmekapazität der mit Wasser befüllten Resoivare
 \begin{equation}
   c_w \cdot m_w = 6230.64 \cdot (\num{4000 +- 1.6}) \, \frac{\text{J}}{\text{K}} = (\num{24.9 +- 0.0}) \cdot 10^6 \, \frac{\text{J}}{\text{K}}
@@ -148,3 +148,21 @@ soll die Güteziffer des Versuches bestimmt werden. Die Theoretische Güteziffer
   \label{tab:gueteziffer}
 \end{table}
 Gründe für die Abweichung zwischen der theoretischen Güteziffer und der praktisch bestimmten werden in der Diskussion aufgeführt.
+\subsection{Massendurchsatz}
+\subsubsection{Dampfdruckkurve}
+Die Verdampfungswärme L wird mit einer Verdampfungskurve ermittelt. Dafür wurde
+\begin{figure}
+  \centering
+  \includegraphics[width=\textwidth]{Dampfdruck.pdf}
+  \caption{Dampfdruckkurve}
+  \label{fig:dampfdruck}
+\end{figure}
+
+\begin{table}
+  \centering
+  \begin{tabular}{c c c}
+    \toprule
+  \end{tabular}
+  \caption{Massendurchsatz $dm/dt$}
+  \label{tab:dm/dt}
+\end{table}
